--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Github User Searching</title>
-  <!-- <title>Github Profiles</title> -->
   <link rel="stylesheet" href="style.css"/>
   <link rel="icon" href="icon.png">
 </head>
 <body>
   <form class="user-form" id="form">
-    <input type="text" id="search" placeholder="Search a Github User">
+    <input type="text" id="search" placeholder="Search a GitHub User">
   </form>
   <main id="main"></main>
 <script src="script.js"></script>
